test/official_tests/inheritance/inherit_from_function.lox
fun foo() {}

class Subclass < foo {} // error: {"line":3,"message":"Superclass must be a class","type":"RuntimeError"}
